--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "imageGetter",
   "description": "Get the direct original link in search pages.",
-  "version": "1.1",
+  "version": "1.2",
   "author": "jim60105",
   "background": { "scripts": ["background.js"] },
   "content_scripts":[{
@@ -21,6 +21,7 @@
   },
   "permissions": [
     "tabs",
-    "activeTab"
+    "activeTab",
+    "alarms"
   ]
 }
